--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "dayjs": "^1.11.9",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-modal-datetime-picker": "^17.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
